@@ -3,6 +3,7 @@ Version: 0.3.17
 Date: 2025-05-30
   Bugfixes:
     - Fixed some technology requirements for AAI Containers
+    - Fixed some technology icons
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.16
 Date: 2025-05-23
